--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "babel-loader": "^7.1.5",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
-    "react-dom": "^16.4.1",
+    "css-loader": "^1.0.0",
     "react": "^16.4.1",
+    "react-dom": "^16.4.1",
+    "style-loader": "^0.21.0",
     "webpack": "^4.16.2",
     "webpack-cli": "^3.1.0"
   }
