--- a/package.json
+++ b/package.json
@@ -18,5 +18,8 @@
     "style-loader": "^0.21.0",
     "webpack": "^4.16.2",
     "webpack-cli": "^3.1.0"
+  },
+  "devDependencies": {
+    "webpack-dev-server": "^3.1.5"
   }
 }
