--- a/package.json
+++ b/package.json
@@ -26,7 +26,12 @@
     "babel-preset-env": "^1.7.0",
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
+    "isomorphic-fetch": "^2.2.1",
     "jest": "^23.4.2",
     "webpack-dev-server": "^3.1.5"
+  },
+  "jest": {
+    "verbose": true,
+    "testURL": "http://localhost/"
   }
 }
